--- a/.config
+++ b/.config
@@ -414,24 +414,24 @@ CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 
 #  释放内存
-CONFIG_PACKAGE_luci-app-ramfree=y
+#CONFIG_PACKAGE_luci-app-ramfree=y
 
 ##############################################################################################
 
 #  系统
 
 #  定时重启
-#CONFIG_PACKAGE_luci-app-autoreboot=y
+CONFIG_PACKAGE_luci-app-autoreboot=y
 
 #  ttyd
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 
 #  磁盘管理
-CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_linear=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm=y
+#CONFIG_PACKAGE_luci-app-diskman=y
+#CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_linear=y
+#CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456=y
+#CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm=y
 
 #  文件传输
 CONFIG_PACKAGE_luci-app-filetransfer=y
@@ -449,43 +449,43 @@ CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 
 #  服务
 #docker
-CONFIG_PACKAGE_luci-app-dockerman=y
-CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
+#CONFIG_PACKAGE_luci-app-dockerman=y
+#CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
 
 #  ShadowSocksR Plus+
-CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
-CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
+#CONFIG_PACKAGE_luci-app-ssr-plus=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
+#CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
 
 #  passwall
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Kcptun=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_PDNSD=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
+#CONFIG_PACKAGE_luci-app-passwall=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Kcptun=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_PDNSD=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
 
 #  passwall2
 #CONFIG_PACKAGE_luci-app-passwall2=y
@@ -505,17 +505,17 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
 #CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Xray=y
 
 #  helloword
-CONFIG_PACKAGE_luci-app-vssr=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Kcptun=y
-CONFIG_PACKAGE_luci-i18n-vssr-zh-cn=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Kcptun=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Libev_Server=y
+#CONFIG_PACKAGE_luci-app-vssr=y
+#CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Kcptun=y
+#CONFIG_PACKAGE_luci-i18n-vssr-zh-cn=y
+#CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=y
+#CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=y
+#CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Kcptun=y
+#CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin=y
+#CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Libev_Server=y
 
 #  openclash
-CONFIG_PACKAGE_luci-app-openclash=y
+#CONFIG_PACKAGE_luci-app-openclash=y
 
 #  luci-app-adguardhome
 #CONFIG_PACKAGE_adguardhome=y
@@ -532,28 +532,28 @@ CONFIG_PACKAGE_luci-app-openclash=y
 #  NAS
 
 #  文件助手
-CONFIG_PACKAGE_luci-app-fileassistant=y
+#CONFIG_PACKAGE_luci-app-fileassistant=y
 
 # ftp
-CONFIG_PACKAGE_luci-app-vsftpd=y
+#CONFIG_PACKAGE_luci-app-vsftpd=y
 
 ##############################################################################################
 
 #  网络
 
 #  TurboACC加速
-CONFIG_PACKAGE_luci-app-turboacc=y
-CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER=y   # turbo acc加速
-CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY=y
-CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
-CONFIG_PACKAGE_luci-app-turboacc-zh-cn=y
+#CONFIG_PACKAGE_luci-app-turboacc=y
+#CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER=y   # turbo acc加速
+#CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY=y
+#CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
+#CONFIG_PACKAGE_luci-app-turboacc-zh-cn=y
 
 ##############################################################################################
 
 # VPN
 
 # 内网穿透 
-CONFIG_PACKAGE_luci-app-zerotier=y
-CONFIG_PACKAGE_luci-app-zerotier-zh-cn=y
+#CONFIG_PACKAGE_luci-app-zerotier=y
+#CONFIG_PACKAGE_luci-app-zerotier-zh-cn=y
 
 ##############################################################################################
